testsuite/tests/iterators/invalid_iterator/bare_node_to_iterator.lkt
import lexer_example

grammar foo_grammar {
    @main_rule main_rule <- Example("example")

}

class FooNode implements Node[FooNode] {
}

class Example : FooNode {

    @exported fun values_iterator(): Iterator[Example] = [node].to_iterator()
}
